[gd_scene load_steps=3 format=3 uid="uid://cttcigow28t0c"]

[ext_resource type="Script" uid="uid://w7kjnmw0h5k4" path="res://fight.gd" id="1_vdcff"]
[ext_resource type="PackedScene" uid="uid://ciuhkq03lxe2v" path="res://StatsScreen.tscn" id="2_iqpu4"]

[node name="Fight" type="Node2D"]
script = ExtResource("1_vdcff")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 720.0
offset_bottom = 1600.0
color = Color(0.176471, 0.176471, 0.176471, 0)
metadata/_edit_use_anchors_ = true

[node name="PlayerTurn" type="Control" parent="ColorRect"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Helmet" type="Button" parent="ColorRect/PlayerTurn"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 2.2
anchor_right = 8.0
anchor_bottom = 4.8
offset_left = 24.0
offset_top = 824.0
offset_right = 32.0
offset_bottom = 832.0
text = "Helmet"
metadata/_edit_use_anchors_ = true

[node name="Amulet" type="Button" parent="ColorRect/PlayerTurn"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.2
anchor_top = 2.2
anchor_right = 6.175
anchor_bottom = 4.225
offset_left = 376.0
offset_top = 824.0
offset_right = 441.0
offset_bottom = 855.0
text = "Amulet"
metadata/_edit_use_anchors_ = true

[node name="Gloves" type="Button" parent="ColorRect/PlayerTurn"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_right = 6.7
anchor_bottom = 2.0
offset_left = 24.0
offset_top = 1040.0
offset_right = 84.0
offset_bottom = 1071.0
text = "Gloves"
metadata/_edit_use_anchors_ = true

[node name="Weapon" type="Button" parent="ColorRect/PlayerTurn"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.2
anchor_right = 6.0
anchor_bottom = 2.025
offset_left = 376.0
offset_top = 1040.0
offset_right = 448.0
offset_bottom = 1071.0
text = "Weapon"
metadata/_edit_use_anchors_ = true

[node name="Combat" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.055
anchor_bottom = 0.08
offset_left = 16.0
offset_top = 64.0
offset_right = 704.0
offset_bottom = 472.0
color = Color(0.76662, 0.76662, 0.76662, 1)
metadata/_edit_use_anchors_ = true

[node name="PlayerHp" type="ColorRect" parent="ColorRect/Combat"]
layout_mode = 0
offset_left = 32.0
offset_top = 48.0
offset_right = 296.0
offset_bottom = 80.0
color = Color(0.621524, 0.621524, 0.621524, 1)

[node name="CurrentHp" type="ColorRect" parent="ColorRect/Combat/PlayerHp"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 32.0
color = Color(1.44392e-05, 0.847765, 1.15514e-06, 1)

[node name="MobHp" type="ColorRect" parent="ColorRect/Combat"]
layout_mode = 0
offset_left = 392.0
offset_top = 48.0
offset_right = 656.0
offset_bottom = 80.0
color = Color(0.621524, 0.621524, 0.621524, 1)

[node name="CurrentHp" type="ColorRect" parent="ColorRect/Combat/MobHp"]
layout_mode = 0
offset_left = 264.0
offset_right = 464.0
offset_bottom = 32.0
scale = Vector2(-1, 1)
color = Color(1.44392e-05, 0.847765, 1.15514e-06, 1)

[node name="StatsScreen" parent="ColorRect" instance=ExtResource("2_iqpu4")]
position = Vector2(0, 640)

[connection signal="button_down" from="ColorRect/PlayerTurn/Helmet" to="." method="_on_helmet_button_down"]
[connection signal="pressed" from="ColorRect/PlayerTurn/Helmet" to="." method="_on_helmet_pressed"]
[connection signal="button_down" from="ColorRect/PlayerTurn/Amulet" to="." method="_on_amulet_button_down"]
[connection signal="pressed" from="ColorRect/PlayerTurn/Amulet" to="." method="_on_amulet_pressed"]
[connection signal="button_down" from="ColorRect/PlayerTurn/Gloves" to="." method="_on_gloves_button_down"]
[connection signal="pressed" from="ColorRect/PlayerTurn/Gloves" to="." method="_on_gloves_pressed"]
[connection signal="button_down" from="ColorRect/PlayerTurn/Weapon" to="." method="_on_weapon_button_down"]
[connection signal="pressed" from="ColorRect/PlayerTurn/Weapon" to="." method="_on_weapon_pressed"]
